hotfix: use break-word to prevent layout bug

--- a/src/components/ExperienceDetail/Article/SectionBlock.module.css
+++ b/src/components/ExperienceDetail/Article/SectionBlock.module.css
@@ -5,4 +5,5 @@
 .content {
   margin-bottom: 1.5em;
   white-space: pre-line;
+  word-break: break-word;
 }
